react router and vertical smooth scrolling implemented

--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
+    "css-select": "^4.3.0",
+    "svgo": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
